# substrate-gateway

./: .dockerignore  .editorconfig  .env.example  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  run-tests.sh
.github/workflows/: ci.yml  docker-publish.yml
crates/fields-macro/: Cargo.toml
crates/fields-macro/src/: lib.rs
crates/substrate-gateway/: Cargo.toml
crates/substrate-gateway/src/: lib.rs  main.rs
crates/substrate-gateway/src/archive/: mod.rs
crates/substrate-gateway/src/archive/postgres/: fields.rs  mod.rs  selection.rs  utils.rs
crates/substrate-gateway/src/server/: mod.rs
crates/substrate-gateway/tests/: common.rs
crates/tests/: Cargo.toml
crates/tests/src/: fields_selection_macro.rs  lib.rs
scripts/: build.sh  docker-publish.sh  pkg-version.py  run-tests.sh
src/: entities.rs  error.rs  graphql.rs  lib.rs  logger.rs  main.rs  metrics.rs  repository.rs  server.rs  services.rs
src/archive/: cockroach.rs  fields.rs  mod.rs  options.rs  postgres.rs  selection.rs  traits.rs
src/archive/postgres/: batch.rs  fields.rs  loader.rs  mod.rs  selection.rs  serializer.rs  utils.rs
src/graphql/: inputs.rs  loader.rs  mod.rs  objects.rs
src/server/: middleware.rs  mod.rs
substrate-archive/: Cargo.toml
substrate-archive/src/: archive.rs  entities.rs  fields.rs  lib.rs  metrics.rs  options.rs  selection.rs  sql.rs  traits.rs
substrate-archive/src/postgres/: batch.rs  controller.rs  fields.rs  limit.rs  mod.rs  partial.rs  selection.rs  serializer.rs  utils.rs
tests/: .env  common.rs  data.sql  db-schema.sql  tests.rs
