[package]
name = "archive-gateway-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "3.0.31", features = [ "chrono", "dataloader" ] }
async-graphql-actix-web = "3.0.31"
async-trait = "0.1.52"
actix-web = { version = "4.0.0-rc.3", default-features = false, features = [ "macros" ] }
sqlx = { version = "0.5.5", features = [ "runtime-actix-native-tls", "postgres", "macros", "chrono", "json" ] }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
