[package]
name = "archive-gateway"
version = "0.1.0"
description = "Graphql server for subsquid archive"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "3.0.31", features = [ "chrono" ] }
async-graphql-actix-web = "3.0.31"
async-trait = "0.1.52"
actix-web = { version = "4.0.0-rc.3", default-features = false, features = [ "macros" ] }
sqlx = { version = "0.5.5", features = [ "runtime-actix-native-tls", "postgres", "macros", "chrono", "json" ] }
chrono = "0.4"
serde_json = "1.0"
prometheus = { version = "0.13", default-features = false }
lazy_static = "1.4.0"
mime = "0.3.16"
convert_case = "0.5.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
futures-util = "0.3.21"
uuid = { version = "1.0.0", features = ["v4"] }
pin-project = "1.0.10"
libc = "0.2"
clap = { version = "3.1.18", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1", features = ["derive"], default-features = false }
