[package]
name = "substrate-gateway"
version = "2.1.5"
description = "Graphql server for substrate-ingest"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'

[dependencies]
async-graphql = { version = "4.0.3", features = [ "chrono" ] }
async-graphql-actix-web = "4.0.3"
async-trait = "0.1.52"
actix-web = { version = "4.1.0", default-features = false, features = [ "macros" ] }
sqlx = { version = "0.5.13", features = [ "runtime-actix-rustls", "postgres", "macros", "chrono", "json", "decimal" ] }
rust_decimal = "1.25.0"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
prometheus = { version = "0.13", default-features = false }
lazy_static = "1.4.0"
mime = "0.3.16"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
futures-util = "0.3.21"
uuid = { version = "1.1.2", features = ["v4"] }
libc = "0.2"
clap = { version = "3.1.18", features = ["derive"] }

substrate-archive = { path = "./substrate-archive", version = "0.1.0" }

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"], default-features = false }
