[package]
name = "substrate-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
sqlx = { version = "0.5.13", features = [ "runtime-actix-rustls", "postgres", "macros", "chrono", "json", "decimal" ] }
rust_decimal = "1.25.0"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
prometheus = { version = "0.13", default-features = false }
lazy_static = "1.4.0"
pin-project = "1.0.10"
